--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -23,6 +23,11 @@ body{
     background: rgba(30, 30, 30, 0.5);
 }
 
+.footer {
+	width:100%;
+	height:100px;
+}
+
 .rightSidebar{
 	padding:20px;
     width:100%;
